--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,9 @@ $font-xs: 10px;
 $font-base: 14px;
 $font-norm: 16px;
 
+$poppins: "Poppins", sans-serif;
+$roboto: "Roboto Condensed", sans-serif;
+
 $tablet: 768px;
 $desktop: 1024px;
 
