Fix Pagetitle margin

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,3 +27,4 @@
 @import './components/navigation';
 @import './components/postPreviewCard';
 @import './components/pointsPreviewCard';
+@import './components/pageTitle';
