--- a/src/styles/components/_postPreviewCard.scss
+++ b/src/styles/components/_postPreviewCard.scss
@@ -4,7 +4,6 @@
     &__content {
         margin: 0 auto;
         padding: 1.5rem;
-        max-width: 350px;
     }
 
     &__tags {
@@ -22,7 +21,8 @@
     }
 
     &__text {
-        margin-top: 15px;
+        margin: 15px auto 0 auto;
+        max-width: 350px;
         text-align: center;
     }
 
@@ -36,6 +36,12 @@
         color: $primary;
         display: block;
         text-align: center;
+        transition: all .2s;
+
+        &:hover {
+            background-color: $primary;
+            color: $white;
+        }
     }
 
     &__footer {
@@ -70,12 +76,5 @@
             cursor: pointer;
             fill: $primary;
         }
-    }
-
-    @include desktop {
-        &:not(:first-child) {
-            margin-top: 0;
-        }
-        width: 31%;
     }
 }
