--- a/src/styles/sections/_postsPreview.scss
+++ b/src/styles/sections/_postsPreview.scss
@@ -1,11 +1,12 @@
 .posts {
-    padding: 100px 0;
+    padding: 60px 0;
     background-color: $bg-light;
 
     &__title {
         font-size: 2rem;
         font-family: $roboto;
         color: $primary;
+        text-align: center
     }
 
     &__content {
@@ -14,22 +15,64 @@
 
     &__container {
         @include flex;
-        flex-direction: column;
-        margin-top: 30px;
+        flex-wrap: wrap;
+        align-items: stretch;
+        margin-top: 50px;
+    }
+
+    &__card {
+        margin-bottom: 50px;
+        max-width: 500px;
     }
 
     &__button {
-        margin: 60px auto 0 auto;
+        margin: 10px auto 0 auto;
         padding: 0.5rem 2rem;
         display: block;
         border: 1px solid $font-color;
         text-transform: uppercase;
+        transition: all .2s;
+
+        &:hover {
+            cursor: pointer;
+            background-color: $font-color;
+            color: $white;
+        }
+    }
+
+    @include tablet {
+        &__card {
+            width: 49%;
+
+            &:nth-child(1) {
+                margin-right: 1%;
+            }
+
+            &:nth-child(2) {
+                margin-left: 1%;
+            }
+        }
     }
 
     @include desktop {
+        &__title {
+            text-align: left;
+        }
+
         &__container {
-            flex-direction: row;
             justify-content: space-between;
+        }
+
+        &__card {
+            width: 32%;
+
+            &:nth-child(1) {
+                margin-right: 0;
+            }
+
+            &:nth-child(2) {
+                margin-left: 0;
+            }
         }
     }
 }
