--- a/src/styles/sections/_pointsPreview.scss
+++ b/src/styles/sections/_pointsPreview.scss
@@ -1,5 +1,5 @@
 .poi {
-    padding: 100px 0;
+    padding: 50px 0;
 
     &__content {
         @include content;
@@ -9,6 +9,7 @@
         font-size: 2rem;
         font-family: $roboto;
         color: $blue;
+        text-align: center;
     }
 
     &__grid {
@@ -27,11 +28,24 @@
         border: 1px solid $font-color;
         background-color: transparent;
         text-transform: uppercase;
+        transition: all .2s;
+
+        &:hover {
+            cursor: pointer;
+            background-color: $font-color;
+            color: $white;
+        }
     }
 
     @include tablet {
         &__grid {
             grid-template-columns: repeat(2, auto);
+        }
+    }
+
+    @include desktop {
+        &__title {
+            text-align: left;
         }
     }
 }
