--- a/src/styles/components/_pageTitle.scss
+++ b/src/styles/components/_pageTitle.scss
@@ -4,7 +4,7 @@
 
     &__title {
         margin-top: 100px;
-        font-size: 3rem;
+        font-size: 2rem;
         font-family: $roboto;
         text-transform: uppercase;
         z-index: 5;
@@ -14,5 +14,11 @@
         margin-top: -10%;
         opacity: .5;
         z-index: 0;
+    }
+
+    @include tablet {
+        &__title {
+            font-size: 3rem;
+        }
     }
 }
