--- a/src/styles/pages/_allPosts.scss
+++ b/src/styles/pages/_allPosts.scss
@@ -1,9 +1,9 @@
 .allposts {
 
     &__container {
-        margin-top: -250px;
+        margin-top: -30%;
         background-color: $bg-light;
-        padding: 100px 0;
+        padding: 50px 0;
         position: relative;
     }
 
@@ -11,11 +11,29 @@
         @include content;
         @include flex;
         flex-wrap: wrap;
-        justify-content: space-evenly;
+        align-items: stretch;
+        justify-content: space-between;
     }
 
     &__card {
-        margin-top: 50px;
+        margin-bottom: 50px;
+        max-width: 500px;
+    }
+
+    @include tablet {
+        &__card {
+            width: 49%;
+        }
+    }
+
+    @include desktop {
+        &__container {
+            margin-top: -15%;
+        }
+
+        &__card {
+            width: 32%;
+        }
     }
 
 }
