Add fullpost styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,6 +10,7 @@
 @import './pages/allPosts';
 @import './pages/allPoints';
 @import './pages/about';
+@import './pages/fullArticle';
 
 
 /* sections */
@@ -28,3 +29,4 @@
 @import './components/postPreviewCard';
 @import './components/pointsPreviewCard';
 @import './components/pageTitle';
+@import './components/sidebar';
