--- a/src/styles/sections/_pointsPreview.scss
+++ b/src/styles/sections/_pointsPreview.scss
@@ -24,10 +24,13 @@
     &__button {
         margin: 60px auto 0 auto;
         padding: 0.5rem 2rem;
+        max-width: 250px;
         display: block;
         border: 1px solid $font-color;
-        background-color: transparent;
+        color: $font-color;
+        font-size: 1rem;
         text-transform: uppercase;
+        text-align: center;
         transition: all .2s;
 
         &:hover {
