--- a/src/styles/sections/_postsPreview.scss
+++ b/src/styles/sections/_postsPreview.scss
@@ -28,9 +28,13 @@
     &__button {
         margin: 10px auto 0 auto;
         padding: 0.5rem 2rem;
+        max-width: 250px;
         display: block;
         border: 1px solid $font-color;
+        font-size: 1rem;
+        color: $font-color;
         text-transform: uppercase;
+        text-align: center;
         transition: all .2s;
 
         &:hover {
