--- a/src/styles/sections/_hero.scss
+++ b/src/styles/sections/_hero.scss
@@ -7,13 +7,15 @@
 
     &__title {
         margin: 150px auto 0 auto;
-        max-width: 700px;
-        font-size: 2.5rem;
+        max-width: 750px;
+        position: relative;
+        font-size: 2rem;
         text-align: center;
+        z-index: 10;
     }
 
     &__img {
-        margin-top: 50px;
+        margin-top: -40px;
     }
 
     &__text {
@@ -28,7 +30,7 @@
         }
 
         &__img {
-            margin-top: 0;
+            margin-top: -90px;
         }
     }
 }
