--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -41,13 +41,16 @@
     &__link {
         padding: 15px 20px;
         align-self: flex-start;
-        font-size: 1.5rem;
+        font-family: $roboto;
+        text-transform: uppercase;
+        font-size: 2rem;
+        font-weight: 700;
         color: $white;
         transition: all .3s;
 
-        &:hover {
-            color: $font-color;
-            text-decoration: underline;
+        &:hover,
+        &--active {
+            color: $primary;
         }
     }
 
@@ -62,6 +65,7 @@
         &__link {
             align-self: unset;
             font-size: $font-norm;
+            font-weight: 400;
             color: $font-color;
             padding: 0 20px 0 0;
             transition: none;
