--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -5,6 +5,7 @@
         margin: -35% auto 0 auto;
         width: 80%;
         max-width: 1000px;
+        display: block;
     }
 
     &__textcontainer {
