--- a/src/styles/sections/_pointsPreview.scss
+++ b/src/styles/sections/_pointsPreview.scss
@@ -8,15 +8,15 @@
     &__title {
         font-size: 2rem;
         font-family: $roboto;
-        color: $blue;
+        color: $primary;
         text-align: center;
     }
 
     &__grid {
-        margin-top: 30px;
-        display: grid;
-        grid-template-columns: auto;
-        gap: 20px;
+        @include flex;
+        flex-wrap: wrap;
+        align-items: stretch;
+        margin-top: 50px;
     }
 
 
@@ -40,15 +40,13 @@
         }
     }
 
-    @include tablet {
-        &__grid {
-            grid-template-columns: repeat(2, auto);
-        }
-    }
-
     @include desktop {
         &__title {
             text-align: left;
+        }
+
+        &__grid {
+            justify-content: space-between;
         }
     }
 }
