--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -2,18 +2,18 @@
     width: 100%;
     max-height: 100vh;
     position: fixed;
-    top: -100%;
+    top: 0;
     bottom: 0;
-    left: 0;
+    left: 100%;
     right: 0;
-    transition: top .4s ease-in-out;
+    transition: left .4s ease-in-out;
     background-color: $blue;
     @include flex;
     flex-direction: column;
-    z-index: 10;
+    z-index: 25;
 
     &--open {
-        top: 0;
+        left: 0;
     }
 
     &__open,
