--- a/src/styles/sections/_pointsPreview.scss
+++ b/src/styles/sections/_pointsPreview.scss
@@ -22,7 +22,7 @@
 
 
     &__button {
-        margin: 60px auto 0 auto;
+        margin: 0 auto;
         padding: 0.5rem 2rem;
         max-width: 250px;
         display: block;
