--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -43,7 +43,7 @@
         align-self: flex-start;
         font-family: $roboto;
         text-transform: uppercase;
-        font-size: 2rem;
+        font-size: 2.25rem;
         font-weight: 700;
         color: $white;
         transition: all .3s;
@@ -72,6 +72,10 @@
 
             &:last-child {
                 padding-right: 0;
+            }
+
+            &--active {
+                color: $primary;
             }
         }
 
